# mancon-back-end

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_create_default_expense_types.py  0003_alter_expense_quantity.py  0004_expense_voucher_file_url.py  0005_remove_expense_voucher_file_url_voucherfile_and_more.py  0006_voucherfile_file_type.py
mancon/: asgi.py  settings.py  urls.py  wsgi.py
